# service-texts

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  pyproject.toml  start.py
configs/: __init__.py  database.py  graylog.py
database/: engine.py  models.py
migrations/: env.py
migrations/versions/: 2770451edb03_delete_text_fields.py  948a4ad5bfe0_new_fields_and_types.py  a537e470dccd_.py  a9e38e578620_zero_migration.py  eca867bd3506_type_change.py
routers/: __init__.py  health.py  texts.py
routers/utils/: pagination.py  query_params.py  sqlalchemy.py
schemas/: __init__.py  examples.py  schemas.py  texts.py
service_logging/: __init__.py  setup.py
