[project]
name = "service-texts"
version = "0.1.0"
description = "Сервис для работы с обучающими текстами в ILPS"
authors = [
    {name = "Oidaho",email = "76991612+Oidaho@users.noreply.github.com"},
    {name = "Ronin-D",email = "100284945+Ronin-D@users.noreply.github.com"}
]
license = {text = "GPL-3.0"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.11,<0.116.0)",
    "sqlalchemy[asyncio] (>=2.0.39,<3.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "alembic (>=1.15.1,<2.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
